# glRoom

./: CMakeLists.txt  CMakePresets.json  README.md
bin_cpy/: level.txt  set.ini
bin_cpy/models/: book.mtl  bookshelf.mtl  chair.mtl  crt.mtl  desk.mtl  keyboard.mtl  moonLamp.mtl  mug.mtl  plant.mtl  room.mtl  shelf.mtl
bin_cpy/shaders/: color.frag  color.vert  render.frag  render.vert
glRoom/: AppSettings.h  CMakeLists.txt  SMQueue.h  StateManager.cpp  StateManager.h  main.cpp  nuklear_sdl_gl3.h  style.h
glRoom/states/: MainMenuState.cpp  MainMenuState.h  PlayState.cpp  PlayState.h  State.h
glRoom/systems/: AudioSys.cpp  AudioSys.h  CRTDisplaySys.cpp  CRTDisplaySys.h  CameraSys.cpp  CameraSys.h  Components.h  DebugDraw.h  GeometryLoader.cpp  GeometryLoader.h  IObserver.h  InputSys.cpp  InputSys.h  PhysicsSys.cpp  PhysicsSys.h  RenderState.h  RenderingSys.cpp  RenderingSys.h  Shader.cpp  Shader.h  Subjects.h  SystemComponents.h
